# chairlift

./: .gitignore  .goreleaser.yaml  .mill.toml  AGENTS.md  CLAUDE.md  CONFIG.md  Justfile  Makefile  NAVIGATION_SPLIT_VIEW_CHANGES.md  README-go-port.md  README.md  chairlift.yml  config.bootc-example.yml  config.example.yml  config.yml  distrobox.ini  go.mod  go.sum  meson.build  mkdocs.yml  test.py
.github/: copilot-instructions.md
.github/workflows/: build.yml  release.yml  snapshot.yml  test.yml
.planning/: .continue-here.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: flatpak-user-system-classification.md
.planning/phases/01-async-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-widget-extraction/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-operations-progress/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  (+3 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
chairlift/: application.py  chairlift.gresource.xml  chairlift.in  config.yml  dialog.py  main.py  meson.build  style.css  window.py
chairlift/core/: backend.py  homebrew.py  meson.build
chairlift/gtk/: dialog.ui  user-home.ui  window.ui
chairlift/scripts/: meson.build
chairlift/views/: meson.build  user_home.py
cmd/chairlift/: main.go
cmd/chairlift-updex-helper/: main.go
data/: chairlift-wrapper.sh  meson.build  org.frostyard.ChairLift.bootc.policy  org.frostyard.ChairLift.bootc.rules  org.frostyard.ChairLift.desktop.in  org.frostyard.ChairLift.instex.policy  org.frostyard.ChairLift.instex.rules  org.frostyard.ChairLift.nbc.policy  org.frostyard.ChairLift.nbc.rules  org.frostyard.ChairLift.policy  org.frostyard.ChairLift.rules  org.frostyard.ChairLift.snap.policy  org.frostyard.ChairLift.snap.rules  org.frostyard.ChairLift.updex.policy  org.frostyard.ChairLift.updex.rules
data/icons/: meson.build
debian/: changelog  control  copyright
docs/: index.md  reference.md
docs/plans/: 2026-02-27-extensions-to-features-design.md  2026-02-27-extensions-to-features-plan.md  2026-02-27-feature-update-check-design.md  2026-03-04-puregotk-alignment-design.md  2026-03-04-puregotk-alignment-plan.md
go/: Makefile  config.yml  go.mod  go.sum
internal/app/: app.go
internal/async/: errors.go  errors_test.go  scheduler.go
internal/bootc/: bootc.go  bootc_test.go  stage.go  stage_test.go
internal/config/: config.go  config_test.go
internal/flatpak/: flatpak.go
internal/gobj/: gobj.go
internal/homebrew/: homebrew.go  trust.go  trust_test.go
internal/installcheck/: goreleaser_test.go  installcheck.go  makefile_test.go
internal/instex/: instex.go
internal/nbc/: nbc.go
internal/operations/: dialogs.go  doc.go  operation.go  operation_test.go  popover.go  registry.go  registry_test.go
internal/pages/: page.go
internal/pm/: wrapper.go
internal/snap/: snap.go
internal/updex/: updex.go  updex_test.go
internal/updexhelper/: updexhelper.go  updexhelper_test.go
internal/version/: version.go
internal/views/: applications_page.go  dryrun.go  features_page.go  help_page.go  maintenance_page.go  shell.go  system_page.go  updates_page.go  updates_page_test.go  userhome.go  views.go
internal/widgets/: action_button.go  async_expander.go  doc.go  empty_state.go  loading_row.go  progress_row.go  rows.go
internal/window/: window.go
pkg/adwutil/: README.md  async.go  doc.go  empty_state.go  errors.go  errors_test.go  operation.go  operation_test.go  operations.go  operations_test.go  widgets.go
po/: POTFILES  chairlift.pot  meson.build
yeti/: OVERVIEW.md  package-managers.md
(+97 files in other folders)
